tests/golden/defaults/floodgate/floodgate/00_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations: {}
  labels:
    app.kubernetes.io/component: floodgate
    app.kubernetes.io/instance: floodgate
    app.kubernetes.io/managed-by: commodore
    app.kubernetes.io/name: floodgate
    app.kubernetes.io/version: v0.2.0
    name: syn-floodgate
    test: testing
  name: syn-floodgate
